@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,17 +29,24 @@ import jdk.test.whitebox.WhiteBox;
 
 import java.lang.reflect.Method;
 
+import jdk.internal.value.ValueClass;
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
+import jdk.internal.vm.annotation.NullRestricted;
+
 import static compiler.valhalla.inlinetypes.InlineTypeIRNode.*;
 import static compiler.valhalla.inlinetypes.InlineTypes.*;
 
 /*
  * @test
  * @key randomness
- * @summary Test inline type specific profiling
+ * @summary Test value class specific type profiling.
  * @library /test/lib /
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
- * @compile -XDenablePrimitiveClasses TestLWorldProfiling.java
- * @run main/othervm/timeout=300 -XX:+EnableValhalla -XX:+EnablePrimitiveClasses compiler.valhalla.inlinetypes.TestLWorldProfiling
+ * @enablePreview
+ * @modules java.base/jdk.internal.value
+ *          java.base/jdk.internal.vm.annotation
+ * @run main/othervm/timeout=300 compiler.valhalla.inlinetypes.TestLWorldProfiling
  */
 
 @ForceCompileClassInitializer
@@ -48,27 +55,23 @@ public class TestLWorldProfiling {
     public static void main(String[] args) {
         final Scenario[] scenarios = {
                 new Scenario(0,
-                        "-XX:+EnableValhalla", "-XX:+EnablePrimitiveClasses",
                         "-XX:FlatArrayElementMaxSize=-1",
                         "-XX:-UseArrayLoadStoreProfile",
                         "-XX:-UseACmpProfile",
                         "-XX:TypeProfileLevel=0",
                         "-XX:-MonomorphicArrayCheck"),
                 new Scenario(1,
-                        "-XX:+EnableValhalla", "-XX:+EnablePrimitiveClasses",
                         "-XX:FlatArrayElementMaxSize=-1",
                         "-XX:+UseArrayLoadStoreProfile",
                         "-XX:+UseACmpProfile",
                         "-XX:TypeProfileLevel=0"),
                 new Scenario(2,
-                        "-XX:+EnableValhalla", "-XX:+EnablePrimitiveClasses",
                         "-XX:FlatArrayElementMaxSize=-1",
                         "-XX:-UseArrayLoadStoreProfile",
                         "-XX:-UseACmpProfile",
                         "-XX:TypeProfileLevel=222",
                         "-XX:-MonomorphicArrayCheck"),
                 new Scenario(3,
-                        "-XX:+EnableValhalla", "-XX:+EnablePrimitiveClasses",
                         "-XX:FlatArrayElementMaxSize=-1",
                         "-XX:-UseArrayLoadStoreProfile",
                         "-XX:-UseACmpProfile",
@@ -77,7 +80,6 @@ public class TestLWorldProfiling {
                         "-XX:TieredStopAtLevel=4",
                         "-XX:-TieredCompilation"),
                 new Scenario(4,
-                        "-XX:+EnableValhalla", "-XX:+EnablePrimitiveClasses",
                         "-XX:FlatArrayElementMaxSize=-1",
                         "-XX:+UseArrayLoadStoreProfile",
                         "-XX:+UseACmpProfile",
@@ -85,7 +87,6 @@ public class TestLWorldProfiling {
                         "-XX:TieredStopAtLevel=4",
                         "-XX:-TieredCompilation"),
                 new Scenario(5,
-                        "-XX:+EnableValhalla", "-XX:+EnablePrimitiveClasses",
                         "-XX:FlatArrayElementMaxSize=-1",
                         "-XX:-UseArrayLoadStoreProfile",
                         "-XX:-UseACmpProfile",
@@ -97,21 +98,31 @@ public class TestLWorldProfiling {
 
         InlineTypes.getFramework()
                    .addScenarios(scenarios)
-                   .addFlags("-XX:+IgnoreUnrecognizedVMOptions")
+                   .addFlags("-XX:+IgnoreUnrecognizedVMOptions", "--enable-preview",
+                             "--add-exports", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
+                             "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED")
                    .addHelperClasses(MyValue1.class,
                                      MyValue2.class)
                    .start();
     }
 
+    @NullRestricted
     private static final MyValue1 testValue1 = MyValue1.createWithFieldsInline(rI, rL);
+    @NullRestricted
     private static final MyValue2 testValue2 = MyValue2.createWithFieldsInline(rI, rD);
-    private static final MyValue1[] testValue1Array = new MyValue1[] {testValue1};
-    private static final MyValue2[] testValue2Array = new MyValue2[] {testValue2};
-    private static final Integer[] testIntegerArray = new Integer[] {42};
-    private static final Long[] testLongArray = new Long[] {42L};
-    private static final Double[] testDoubleArray = new Double[] {42.0D};
-    private static final MyValue1.ref[] testValue1NotFlatArray = new MyValue1.ref[] {testValue1};
-    private static final MyValue1[][] testValue1ArrayArray = new MyValue1[][] {testValue1Array};
+    private static final MyValue1[] testValue1Array = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
+    static {
+        testValue1Array[0] = testValue1;
+    }
+    private static final MyValue2[] testValue2Array = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, 1);
+    static {
+        testValue2Array[0] = testValue2;
+    }
+    private static final Integer[] testIntegerArray = new Integer[] { 42 };
+    private static final Long[] testLongArray = new Long[] { 42L };
+    private static final Double[] testDoubleArray = new Double[] { 42.0D };
+    private static final MyValue1[] testValue1NotFlatArray = new MyValue1[] { testValue1 };
+    private static final MyValue1[][] testValue1ArrayArray = new MyValue1[][] { testValue1Array };
 
     // Wrap these variables into helper class because
     // WhiteBox API needs to be initialized by TestFramework first.
@@ -122,6 +133,29 @@ public class TestLWorldProfiling {
         static final boolean UseArrayLoadStoreProfile = (Boolean) WhiteBox.getWhiteBox().getVMFlag("UseArrayLoadStoreProfile");
         static final long TypeProfileLevel = (Long) WhiteBox.getWhiteBox().getVMFlag("TypeProfileLevel");
     }
+
+    static abstract class NonValueAbstract {
+
+    }
+
+    static class NonValueClass1 extends NonValueAbstract {
+        int x;
+
+        public NonValueClass1(int x) {
+            this.x = x;
+        }
+    }
+
+    static class NonValueClass2 extends NonValueAbstract {
+        int x;
+
+        public NonValueClass2(int x) {
+            this.x = x;
+        }
+    }
+
+    static final NonValueClass1 obj = new NonValueClass1(rI);
+    static final NonValueClass2 otherObj = new NonValueClass2(rI);
 
     // aaload
 
@@ -226,20 +260,21 @@ public class TestLWorldProfiling {
     public void test6_no_inline() {
     }
 
-
-    public void test6_helper(Number[] arg) {
-        if (arg instanceof Long[]) {
+    @ForceInline
+    public void test6_helper(NonValueAbstract[] arg) {
+        if (arg instanceof NonValueClass1[]) {
             test6_no_inline();
         }
     }
 
     @Test
+    // TODO 8325106 double-check rule modifications done by 8325660
     @IR(applyIfOr = {"UseArrayLoadStoreProfile", "true", "TypeProfileLevel", "= 222"},
-        counts = {CALL, "= 3", CLASS_CHECK_TRAP, "= 1", NULL_CHECK_TRAP, "= 1", RANGE_CHECK_TRAP, "= 1"})
+        counts = {CALL, "= 4", CLASS_CHECK_TRAP, "= 1", NULL_CHECK_TRAP, "= 1", RANGE_CHECK_TRAP, "= 1"})
     @IR(applyIfAnd = {"UseArrayLoadStoreProfile", "false", "TypeProfileLevel", "!= 222"},
-        counts = {CALL, "= 4", RANGE_CHECK_TRAP, "= 1", NULL_CHECK_TRAP, "= 1"})
-    public Object test6(Number[] array) {
-        Number v = array[0];
+        counts = {CALL, "= 3", RANGE_CHECK_TRAP, "= 1", NULL_CHECK_TRAP, "= 1"})
+    public Object test6(NonValueAbstract[] array) {
+        NonValueAbstract v = array[0];
         test6_helper(array);
         return v;
     }
@@ -249,30 +284,31 @@ public class TestLWorldProfiling {
     public void test6_verifier(RunInfo info) {
         if (info.isWarmUp()) {
             // pollute profile
-            test6_helper(testLongArray);
-            test6_helper(testDoubleArray);
+            test6_helper(new NonValueClass1[1]);
+            test6_helper(new NonValueClass2[1]);
         }
-        test6(testIntegerArray);
+        test6(new NonValueClass1[1]);
     }
 
     @DontInline
     public void test7_no_inline() {
     }
 
-
-    public void test7_helper(Number arg) {
-        if (arg instanceof Long) {
+    @ForceInline
+    public void test7_helper(Object arg) {
+        if (arg instanceof NonValueClass1) {
             test7_no_inline();
         }
     }
 
     @Test
+    // TODO 8325106 double-check rule modifications done by 8325660
     @IR(applyIfOr = {"UseArrayLoadStoreProfile", "true", "TypeProfileLevel", "= 222"},
-        counts = {CALL, "= 4", CLASS_CHECK_TRAP, "= 1", NULL_CHECK_TRAP, "= 2", RANGE_CHECK_TRAP, "= 1"})
+        counts = {CALL, "= 3", CLASS_CHECK_TRAP, "= 0", NULL_CHECK_TRAP, "= 1", RANGE_CHECK_TRAP, "= 1"})
     @IR(applyIfAnd = {"UseArrayLoadStoreProfile", "false", "TypeProfileLevel", "!= 222"},
-        counts = {CALL, "= 5", RANGE_CHECK_TRAP, "= 1", NULL_CHECK_TRAP, "= 2"})
-    public Object test7(Number[] array) {
-        Number v = array[0];
+        counts = {CALL, "= 3", RANGE_CHECK_TRAP, "= 1", NULL_CHECK_TRAP, "= 1"})
+    public Object test7(NonValueAbstract[] array) {
+        NonValueAbstract v = array[0];
         test7_helper(v);
         return v;
     }
@@ -282,10 +318,10 @@ public class TestLWorldProfiling {
     public void test7_verifier(RunInfo info) {
         if (info.isWarmUp()) {
             // pollute profile
-            test7_helper(42L);
-            test7_helper(42.0D);
+            test7_helper(new NonValueClass1(rI));
+            test7_helper(new NonValueClass2(rI));
         }
-        test7(testIntegerArray);
+        test7(new NonValueClass1[1]);
     }
 
     @DontInline
@@ -339,7 +375,6 @@ public class TestLWorldProfiling {
         test9(testValue1Array, testValue1);
         Asserts.assertEQ(testValue1Array[0].hash(), testValue1.hash());
     }
-
 
     @Test
     @IR(applyIfOr = {"UseArrayLoadStoreProfile", "true", "TypeProfileLevel", "= 222"},
@@ -427,20 +462,25 @@ public class TestLWorldProfiling {
 
     // null free array profiling
 
-    primitive static class NotFlattenable {
-        private final Object o1 = null;
-        private final Object o2 = null;
-        private final Object o3 = null;
-        private final Object o4 = null;
-        private final Object o5 = null;
-        private final Object o6 = null;
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class NotFlattenable {
+        private Object o1 = null;
+        private Object o2 = null;
+        private Object o3 = null;
+        private Object o4 = null;
+        private Object o5 = null;
+        private Object o6 = null;
     }
 
+    @NullRestricted
     private static final NotFlattenable notFlattenable = new NotFlattenable();
-    private static final NotFlattenable[] testNotFlattenableArray = new NotFlattenable[] { notFlattenable };
+    private static final NotFlattenable[] testNotFlattenableArray = (NotFlattenable[])ValueClass.newNullRestrictedArray(NotFlattenable.class, 1);
 
     @Test
-    @IR(applyIfOr = {"UseArrayLoadStoreProfile", "true", "TypeProfileLevel", "= 222"},
+// TODO 8325106
+//    @IR(applyIfOr = {"UseArrayLoadStoreProfile", "true", "TypeProfileLevel", "= 222"},
+    @IR(applyIf = {"UseArrayLoadStoreProfile", "true"},
         counts = {NULL_CHECK_TRAP, "= 2"},
         failOn = {STORE_UNKNOWN_INLINE})
     @IR(applyIfAnd = {"UseArrayLoadStoreProfile", "false", "TypeProfileLevel", "!= 222"},
@@ -569,7 +609,7 @@ public class TestLWorldProfiling {
 
     // branch frequency profiling causes not equal branch to be optimized out
     @Test
-    @IR(failOn = {SUBSTITUTABILITY_TEST})
+    @IR(counts = {IRNode.UNSTABLE_IF_TRAP, " = 1"})
     public boolean test21(Object o1, Object o2) {
         return o1 == o2;
     }
@@ -577,7 +617,7 @@ public class TestLWorldProfiling {
     @Run(test = "test21")
     @Warmup(10000)
     public void test21_verifier() {
-        test21(42, 42);
+        test21(obj, obj);
         test21(testValue1, testValue1);
     }
 
@@ -595,12 +635,12 @@ public class TestLWorldProfiling {
     @Run(test = "test22")
     @Warmup(10000)
     public void test22_verifier(RunInfo info) {
-        test22(42, null);
-        test22(42.0, null);
+        test22(obj, null);
+        test22(otherObj, null);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
-            test22(42, 42.0);
+            test22(obj, otherObj);
             if (WBFlags.UseACmpProfile) {
                 TestFramework.assertDeoptimizedByC2(m);
             }
@@ -620,12 +660,12 @@ public class TestLWorldProfiling {
     @Run(test = "test23")
     @Warmup(10000)
     public void test23_verifier(RunInfo info) {
-        test23(null, 42);
-        test23(null, 42.0);
+        test23(null, obj);
+        test23(null, otherObj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
-            test23(42, 42.0);
+            test23(obj, otherObj);
             if (WBFlags.UseACmpProfile || WBFlags.TypeProfileLevel != 0) {
                 TestFramework.assertDeoptimizedByC2(m);
             }
@@ -645,12 +685,12 @@ public class TestLWorldProfiling {
     @Run(test = "test24")
     @Warmup(10000)
     public void test24_verifier(RunInfo info) {
-        test24(42, null);
-        test24(42.0, null);
+        test24(obj, null);
+        test24(otherObj, null);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
-            test24(42, 42.0);
+            test24(obj, otherObj);
              if (WBFlags.UseACmpProfile) {
                  TestFramework.assertDeoptimizedByC2(m);
             }
@@ -670,19 +710,19 @@ public class TestLWorldProfiling {
     @Run(test = "test25")
     @Warmup(10000)
     public void test25_verifier(RunInfo info) {
-        test25(null, 42);
-        test25(null, 42.0);
+        test25(null, obj);
+        test25(null, otherObj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
-            test25(42, 42.0);
+            test25(obj, otherObj);
             if (WBFlags.UseACmpProfile || WBFlags.TypeProfileLevel != 0) {
                 TestFramework.assertDeoptimizedByC2(m);
             }
         }
     }
 
-    // Input profiled not inline type with known type
+    // Input profiled not value class with known type
     @Test
     @IR(applyIfOr = {"UseACmpProfile", "true", "TypeProfileLevel", "= 222"},
         failOn = {SUBSTITUTABILITY_TEST},
@@ -696,13 +736,13 @@ public class TestLWorldProfiling {
     @Run(test = "test26")
     @Warmup(10000)
     public void test26_verifier(RunInfo info) {
-        test26(42, 42);
-        test26(42, 42.0);
+        test26(obj, obj);
+        test26(obj, otherObj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test26(42.0, 42);
+                test26(otherObj, obj);
             }
             if (WBFlags.UseACmpProfile || WBFlags.TypeProfileLevel != 0) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -723,13 +763,13 @@ public class TestLWorldProfiling {
     @Run(test = "test27")
     @Warmup(10000)
     public void test27_verifier(RunInfo info) {
-        test27(42, 42);
-        test27(42.0, 42);
+        test27(obj, obj);
+        test27(otherObj, obj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test27(42, 42.0);
+                test27(obj, otherObj);
             }
             if (WBFlags.UseACmpProfile) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -750,13 +790,13 @@ public class TestLWorldProfiling {
     @Run(test = "test28")
     @Warmup(10000)
     public void test28_verifier(RunInfo info) {
-        test28(42, 42);
-        test28(42, 42.0);
+        test28(obj, obj);
+        test28(obj, otherObj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test28(42.0, 42);
+                test28(otherObj, obj);
             }
             if (WBFlags.UseACmpProfile || WBFlags.TypeProfileLevel != 0) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -777,13 +817,13 @@ public class TestLWorldProfiling {
     @Run(test = "test29")
     @Warmup(10000)
     public void test29_verifier(RunInfo info) {
-        test29(42, 42);
-        test29(42.0, 42);
+        test29(obj, obj);
+        test29(otherObj, obj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test29(42, 42.0);
+                test29(obj, otherObj);
             }
             if (WBFlags.UseACmpProfile) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -804,14 +844,14 @@ public class TestLWorldProfiling {
     @Run(test = "test30")
     @Warmup(10000)
     public void test30_verifier(RunInfo info) {
-        test30(42, 42);
-        test30(42, 42.0);
+        test30(obj, obj);
+        test30(obj, otherObj);
         test30(null, 42);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test30(42.0, 42);
+                test30(otherObj, obj);
             }
             if (WBFlags.UseACmpProfile || WBFlags.TypeProfileLevel != 0) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -831,14 +871,14 @@ public class TestLWorldProfiling {
     @Run(test = "test31")
     @Warmup(10000)
     public void test31_verifier(RunInfo info) {
-        test31(42, 42);
-        test31(42.0, 42);
-        test31(42, null);
+        test31(obj, obj);
+        test31(otherObj, obj);
+        test31(obj, null);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test31(42, 42.0);
+                test31(obj, otherObj);
             }
             if (WBFlags.UseACmpProfile) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -846,7 +886,7 @@ public class TestLWorldProfiling {
         }
     }
 
-    // Input profiled not inline type with unknown type
+    // Input profiled not value class with unknown type
     @Test
     @IR(applyIf = {"UseACmpProfile", "true"},
         failOn = {SUBSTITUTABILITY_TEST},
@@ -860,9 +900,9 @@ public class TestLWorldProfiling {
     @Run(test = "test32")
     @Warmup(10000)
     public void test32_verifier(RunInfo info) {
-        test32(42, 42);
-        test32(42, testValue1);
-        test32(42.0, 42);
+        test32(obj, obj);
+        test32(obj, testValue1);
+        test32(otherObj, obj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
@@ -888,14 +928,14 @@ public class TestLWorldProfiling {
     @Run(test = "test33")
     @Warmup(10000)
     public void test33_verifier(RunInfo info) {
-        test33(42, 42);
-        test33(testValue1, 42);
-        test33(42, 42.0);
+        test33(obj, obj);
+        test33(testValue1, obj);
+        test33(obj, otherObj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test33(42, testValue1);
+                test33(obj, testValue1);
             }
             if (WBFlags.UseACmpProfile) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -916,9 +956,9 @@ public class TestLWorldProfiling {
     @Run(test = "test34")
     @Warmup(10000)
     public void test34_verifier(RunInfo info) {
-        test34(42, 42);
-        test34(42, testValue1);
-        test34(42.0, 42);
+        test34(obj, obj);
+        test34(obj, testValue1);
+        test34(otherObj, obj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
@@ -944,14 +984,14 @@ public class TestLWorldProfiling {
     @Run(test = "test35")
     @Warmup(10000)
     public void test35_verifier(RunInfo info) {
-        test35(42, 42);
-        test35(testValue1, 42);
-        test35(42, 42.0);
+        test35(obj, obj);
+        test35(testValue1, obj);
+        test35(obj, otherObj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test35(42, testValue1);
+                test35(obj, testValue1);
             }
             if (WBFlags.UseACmpProfile) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -972,14 +1012,14 @@ public class TestLWorldProfiling {
     @Run(test = "test36")
     @Warmup(10000)
     public void test36_verifier(RunInfo info) {
-        test36(42, 42.0);
-        test36(42.0, testValue1);
-        test36(null, 42);
+        test36(obj, otherObj);
+        test36(otherObj, testValue1);
+        test36(null, obj);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test36(testValue1, 42);
+                test36(testValue1, obj);
             }
             if (WBFlags.UseACmpProfile) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -999,14 +1039,14 @@ public class TestLWorldProfiling {
     @Run(test = "test37")
     @Warmup(10000)
     public void test37_verifier(RunInfo info) {
-        test37(42.0, 42);
-        test37(testValue1, 42.0);
-        test37(42, null);
+        test37(otherObj, obj);
+        test37(testValue1, otherObj);
+        test37(obj, null);
         if (!info.isWarmUp()) {
             Method m = info.getTest();
             TestFramework.assertCompiledByC2(m);
             for (int i = 0; i < 10; i++) {
-                test37(42, testValue1);
+                test37(obj, testValue1);
             }
             if (WBFlags.UseACmpProfile) {
                 TestFramework.assertDeoptimizedByC2(m);
@@ -1019,9 +1059,9 @@ public class TestLWorldProfiling {
     @Test
     @IR(applyIfOr = {"UseACmpProfile", "true", "TypeProfileLevel", "= 222"},
         failOn = {SUBSTITUTABILITY_TEST},
-        counts = {CLASS_CHECK_TRAP, "= 1"})
+        counts = {CLASS_CHECK_TRAP, "= 2"})
     @IR(applyIfAnd = {"UseACmpProfile", "false", "TypeProfileLevel", "!= 222"},
-        counts = {SUBSTITUTABILITY_TEST, "= 1"})
+        counts = {SUBSTITUTABILITY_TEST, "= 2"})
     public void test38(Object o1, Object o2, Object o3) {
         if (o1 == o2) {
             test38_helper2();
@@ -1040,17 +1080,16 @@ public class TestLWorldProfiling {
     @Run(test = "test38")
     @Warmup(10000)
     public void test38_verifier() {
-        test38(42, 42, 42);
+        test38(obj, obj, obj);
         test38_helper(testValue1, testValue2);
     }
-
 
     @Test
     @IR(applyIfOr = {"UseACmpProfile", "true", "TypeProfileLevel", "= 222"},
         failOn = {SUBSTITUTABILITY_TEST},
-        counts = {CLASS_CHECK_TRAP, "= 1"})
+        counts = {CLASS_CHECK_TRAP, "= 2"})
     @IR(applyIfAnd = {"UseACmpProfile", "false", "TypeProfileLevel", "!= 222"},
-        counts = {SUBSTITUTABILITY_TEST, "= 1"})
+        counts = {SUBSTITUTABILITY_TEST, "= 2"})
     public void test39(Object o1, Object o2, Object o3) {
         if (o1 == o2) {
             test39_helper2();
@@ -1069,14 +1108,17 @@ public class TestLWorldProfiling {
     @Run(test = "test39")
     @Warmup(10000)
     public void test39_verifier() {
-        test39(42, 42, 42);
+        test39(obj, obj, obj);
         test39_helper(testValue1, testValue2);
     }
 
     // Test array access with polluted array type profile
-    static abstract class Test40Abstract { }
-    static class Test40Class extends Test40Abstract { }
-    static primitive class Test40Inline extends Test40Abstract { }
+    static abstract value class Test40Abstract { }
+    static value class Test40Class extends Test40Abstract { }
+
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class Test40Inline extends Test40Abstract { }
 
     @ForceInline
     public Object test40_access(Object[] array) {
@@ -1125,7 +1167,8 @@ public class TestLWorldProfiling {
             test41_access(new Object[1], new Object());
         } else {
             // When inlining test41_access, profiling contradicts actual type of array
-            test41(new Test40Inline[1], new Test40Inline());
+            Test40Inline[] array = (Test40Inline[])ValueClass.newNullRestrictedArray(Test40Inline.class, 1);
+            test41(array, new Test40Inline());
         }
     }
 }
